# paypal-data-analyst-take-home

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
data/: whatcms_urls.csv
diagrams/: class_diagram.mmd
output/: whatcms_enriched_output.csv
src/: __init__.py  data_enricher.py  dev.ipynb  main.py  whatcms_client.py
