[project]
name = "whatcms-url-enquiry-app"
version = "0.1.0"
description = "Enriches URLs with CMS and technology information using WhatCMS API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "openpyxl>=3.1.2",
    "pyyaml>=6.0.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "fire>=0.7.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]